--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
 body {
@@ -503,6 +506,7 @@ body {
 }
 
 .top-wrapper {
+  max-width: 100%;
   padding: 50px 0px;
   display: grid;
   grid-template-columns: 2fr 2fr;
@@ -525,13 +529,21 @@ body {
 
 .top-mid,
 .top-right {
-  height: 40vh;
+  height: auto;
+  max-height: 40vh;
+  width: 100%;
 }
 
+.mid-right-group {
+  display: flex;
+  gap: 0;
+}
 .mid-wrapper {
+  max-width: 100%;
+
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  gap: 40px;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
   width: 90%;
   margin: 0 auto;
   align-items: start;
@@ -555,21 +567,26 @@ body {
 }
 
 .mid-left {
-  height: 69.3vh;
+  height: 70vh;
+  max-width: 100%;
 }
 .mid-mid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 20px;
+  text-align: left;
 }
 
 .mid-mid h3 {
   color: #b8b18f;
-  font-size: 14px;
+  font-size: 34px;
   line-height: 1.5;
   width: 100%;
 }
 
 .mid-right {
-  width: 100%;
+  max-width: 100%;
   max-height: 70vh;
   height: auto;
   display: block;
@@ -581,7 +598,8 @@ body {
 .bottom-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 100%;
+  max-width: 100%;
+
   /* ✅ Remove fixed height so it grows with content */
 }
 
