--- a/Carpets/css/about.css
+++ b/Carpets/css/about.css
@@ -286,6 +286,52 @@ body {
   }
 }
 
+.off-screen .dropdown__menu,
+.off-screen .dropdown__submenu {
+  display: none;
+  flex-direction: column;
+  padding-left: 15px;
+}
+
+.off-screen .dropdown.open > .dropdown__menu,
+.off-screen .dropdown.open > .dropdown__submenu {
+  display: flex;
+}
+
+.off-screen .arrow {
+  float: right;
+  transition: transform 0.3s ease;
+}
+
+.off-screen .dropdown.open > a .arrow {
+  transform: rotate(90deg);
+}
+
+/* Parent li relative positioning for submenu */
+.dropdown__submenu li.has-submenu {
+  position: relative;
+}
+
+/* Show submenu on hover */
+.dropdown__submenu li.has-submenu:hover > .dropdown__submenu {
+  display: flex;
+}
+
+/* Optional arrow styling */
+.dropdown__link .arrow {
+  float: right;
+  margin-left: 5px;
+  transition: transform 0.2s;
+}
+
+.dropdown__submenu li.has-submenu:hover > .dropdown__link .arrow {
+  transform: rotate(90deg);
+}
+/* Show nested submenu on hover */
+.dropdown:hover > .dropdown__submenu {
+  display: flex;
+}
+
 /* == Container == */
 
 .about {
