added whats app to all pages

--- a/Carpets/css/about.css
+++ b/Carpets/css/about.css
@@ -1014,3 +1014,9 @@ body {
   width: 120px;
   height: 160px;
 }
+
+
+.elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72 {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
