--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -964,3 +964,9 @@ textarea.input {
     padding: 0.45rem 1.2rem;
   }
 }
+
+
+.elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72 {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
