--- a/Carpets/css/gallery.css
+++ b/Carpets/css/gallery.css
@@ -571,3 +571,8 @@ body {
 .footer-link a:hover {
   text-decoration: underline;
 }
+
+.elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72 {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
