Update v1.0.0 -> Added mobile van image removed all mention of twist 5050 fixed victoria universal json for the name of the flooring

--- a/style.css
+++ b/style.css
@@ -1330,6 +1330,12 @@ body {
     height: auto;
     object-fit: cover;
   }
+  .mobile-hero-img2 {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    padding-top: 45px;
+  }
 
   .hero-mobile-content {
     display: flex;
